# ardan-lang

./: CMakeLists.txt  README.md  TEST.md  UNIX_PKG.md  ardan.pkg  build.sh  pkg.sh
ardan-lang/: CMakeLists.txt  main.cpp  main.mm
ardan-lang.xcodeproj/: project.pbxproj
ardan-lang.xcodeproj/xcshareddata/xcschemes/: tau-programming-lang.xcscheme
ardan-lang/Compiler/: BaseVM.cpp  BaseVM.hpp  CodeGenerator.cpp  CodeGenerator.hpp  CodeGeneratorV2.cpp  CodeGeneratorV2.hpp  Compiler.cpp  Compiler.hpp  TurboCodeGenerator.cpp  TurboCodeGenerator.hpp
ardan-lang/Compiler/ArdarFileReader/: ArdarFileReader.cpp  ArdarFileReader.hpp
ardan-lang/Compiler/Turbo/: Bytecode.cpp  Bytecode.hpp  PeregrineVM.cpp  (+13 more)
ardan-lang/Documentation.docc/: Documentation.md  comments.md  todo.md
ardan-lang/EventLoop/: EventLoop.cpp  EventLoop.hpp
ardan-lang/Expression/: Expression.hpp
ardan-lang/ExpressionVisitor/: ExpressionVisitor.hpp
ardan-lang/GUI/: gui.h  gui.mm
ardan-lang/Interpreter/: Env.cpp  Env.h  Interpreter.cpp  Interpreter.h  R.hpp
ardan-lang/JSON/: JSON.cpp  JSON.hpp
ardan-lang/Parser/: Parser.cpp  Parser.hpp
ardan-lang/REPL/: REPL.cpp  REPL.hpp
ardan-lang/Scanner/: Scanner.cpp  Scanner.hpp
ardan-lang/Statements/: Interface.cpp  Interface.hpp  StatementVisitor.hpp  Statements.hpp
ardan-lang/builtin/: builtin-includes.h
ardan-lang/overloads/: operators.cpp
ardan-lang/tests/: array_object_edgecases.ardan  async.ardan  classes_and_inheritance.ardan  compile.ardan  core_integrations.ardan  exceptions_and_errors.ardan  functions_and_closures.ardan  gui.ardan  recursion.ardan  scoping_and_shadowing.ardan  server.ardan  stub_module.ardan  template_literals_and_strings.ardan  tests2.ardan
script/: run_all_tests.sh  run_all_tests_v2.sh
tau-programming-lang/: CMakeLists.txt  main.cpp
tau-programming-lang.xcodeproj/: project.pbxproj
tau-programming-lang/Documentation.docc/: todo.md
tau-programming-lang/Expression/: Expression.cpp  Expression.hpp
tau-programming-lang/ExpressionVisitor/: ExpressionVisitor.cpp  ExpressionVisitor.hpp
tau-programming-lang/Interpreter/: Env.cpp  Env.h  Interpreter.cpp  Interpreter.h  R.cpp  R.hpp
tau-programming-lang/Interpreter/ExecutionContext/: JSArray.h  JSClass.h  JSObject.h  Value.h
tau-programming-lang/Interpreter/ExecutionContext/JSArray/: JSArray.cpp  JSArray.h
tau-programming-lang/Interpreter/ExecutionContext/JSClass/: JSClass.cpp  JSClass.h
tau-programming-lang/Interpreter/ExecutionContext/JSObject/: JSObject.cpp  JSObject.h
tau-programming-lang/Interpreter/ExecutionContext/Value/: Value.cpp  Value.h
tau-programming-lang/Interpreter/FunctionObject/: FunctionObject.cpp  FunctionObject.hpp
tau-programming-lang/Interpreter/Utils/: Utils.h
tau-programming-lang/Parser/: Parser.cpp  Parser.hpp
tau-programming-lang/Scanner/: Scanner.cpp  Scanner.hpp
tau-programming-lang/Scanner/Token/: Token.hpp  TokenType.h
tau-programming-lang/Statements/: StatementVisitor.cpp  StatementVisitor.hpp  Statements.cpp  Statements.hpp
tau-programming-lang/Visitor/: PrintVisitor.cpp  PrintVisitor.hpp
tau-programming-lang/Visitor/AstPrinter/: AstPrinter.cpp  AstPrinter.h
tau-programming-lang/builtin/: builtin-includes.h
tau-programming-lang/builtin/File/: File.hpp  README.md
tau-programming-lang/builtin/Math/: Math.cpp  Math.hpp
tau-programming-lang/builtin/Network/: Network.cpp
tau-programming-lang/builtin/Print/: Print.cpp  Print.hpp
tau-programming-lang/overloads/: operators.cpp  operators.h
tests/: Button.hpp  Button.mm  core_integrations.ardan  destructuring_and_spread.ardan  import_module.ardan
(+103 files in other folders)
